# redblack

./: .cursorrules  Cargo.toml  README.md  bun.lockb  package.json  rustfmt.toml
rb_macros/: Cargo.toml
rb_macros/src/: lib.rs
scripts/: processDiagnosticMessages.ts
src/: main.rs
src/compiler/: binder.rs  checker.rs  core.rs  diagnosticInformationMap.generated.rs  diagnosticMessages.generated.json  diagnosticMessages.json  diagnostic_information_map_generated.rs  mod.rs  moduleNameResolver.rs  parser.rs  path.rs  program.rs  rb_extra.rs  rb_host.rs  rb_macros.rs  rb_parser.rs  rb_unions.rs  scanner.rs  test.ts  types.rs  utilities.rs  utilitiesPublic.rs
src/compiler/factory/: mod.rs  nodeTests.rs  node_tests.rs  utilities.rs  utilitiesPublic.rs
src/services/: services.rs
src/snips/: block.ts  call_signature.ts  case_block.ts  identifier.ts  import_clause.ts  module_declaration.ts  qualified_name.ts  type_query.ts
