[package]
name = "redblack"
version = "0.1.0"
edition = "2021"

[dependencies]
oxc = { path = "/Users/saswat/Documents/clones/oxc/crates/oxc", features = ["full"] }
oxc_traverse = { path = "/Users/saswat/Documents/clones/oxc/crates/oxc_traverse" }
serde = "*"
serde_json = "*"
weak-table = "*"
once_cell = "*"
paste = "*"
